<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ea.ironmonkey.devmenu.MainActivity">

    <RadioGroup
        android:id="@+id/switcherFiles"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/externalStoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/external_store_title"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/internalStoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/internal_store_title"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_title" />

    </RadioGroup>

    <TextView
        android:id="@+id/current_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:padding="10dp" />

    <ListView
        android:id="@+id/FileList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
</LinearLayout>